Bug 819131 - Preserve reflector delegate weak map keys. r=billm